# rcsb-seqmapping

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .readthedocs.yaml  .scrutinizer.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  NOTICE.md  README.md  SECURITY.md  compose.yaml  mkdocs.yaml  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml  project.yaml  release.yaml  settings.yml
.github/DISCUSSION_TEMPLATE/: general.yaml
.github/ISSUE_TEMPLATE/: bug.yaml  config.yaml  config.yml  docs.yaml  feature.yaml  performance.yaml
.github/workflows/: _deploy-docs.yaml  _deploy-packages.yaml  _test.yaml  bump-version.yaml  bump.yaml  check-commits.yaml  check-docs.yaml  check-link-rot.yaml  check-links.yaml  check-pr-metadata.yaml  check-security.yaml  codeql.yaml  deploy-docs.yaml  deploy-packages.yaml  deploy.yaml  docker.yaml  format-pr.yaml  issue-opened.yaml  issue-ready-for-dev.yaml  label-state-machines.yaml  maintain-labels.yaml  optimize-pr.yaml  please-test.yaml  pull-request.yaml  pull.yaml  push.yaml  pytest.yaml  release.yaml  review.yaml  set-repo-metadata.yaml  sync-tags.yaml  test-one.yaml  test-pr.yaml  test.yaml  track-tags.yaml  triage.yaml  update-coverage.yaml  update-tracking-tags.yaml  validate-pr-metadata.yaml
docs/: SUMMARY.md  __init__.py  conf.py  gen_ref_pages.py  guide.md  index.md  intro.md  ref.md
projects/seqmapping/src/: group_pdb_seqs.py  preprocess_databases.sh  run_mmseqs2_search.sh  search_output_to_mongo.py  seqmapping_pipe.py  setup_mmseqs2.sh
src/cicd/: __init__.py  __main__.py  _about.py  _global_vars.py  _internal.py  _meta.py  _metadata.py  _project_metadata.py  api.py  app.py  clean.py  cli.py  commitizen_plugin.py  commitz.py  context.py  git.py  james.py  wrapped_toml.py
src/cicd/api/: __main__.py  _internal.py  api.py  background.py  middleware.py  mongo.py  postgres.py
src/sql/: init.sql
tests/: __init__.py  test_main.py
